Darken index bg, fix some responsiveness spacing

--- a/styles/Index.module.scss
+++ b/styles/Index.module.scss
@@ -61,7 +61,7 @@
 .articleWrapper1,
 .articleWrapper2,
 .articleWrapper3 {
-  background: var(--gray-gradient);
+  background: var(--light-gray-2);
   -webkit-box-shadow: var(--simple-shadow);
   box-shadow: var(--simple-shadow);
 }
@@ -103,12 +103,12 @@
 
 .aboutCreated {
   margin-right: 2rem;
-  background: var(--gray-gradient-2);
+  background: var(--light-gray);
 }
 
 .aboutAws {
   margin-left: 2rem;
-  background: var(--gray-gradient-3);
+  background: var(--light-gray);
 }
 
 .aboutAwsContainer {
@@ -122,7 +122,7 @@
   margin: auto 0;
   padding: 10px;
   border-radius: 5px;
-  font-size: 11px;
+  font-size: 12px;
   line-height: 20px;
   max-width: 80%;
 }
@@ -135,17 +135,21 @@
 .emailParentButton {
   display: flex;
   margin-left: 10px;
+  -webkit-box-shadow: var(--simple-shadow);
+  box-shadow: var(--simple-shadow);
+  border-radius: 10px;
+  border: 2px solid #ebebeb;
 }
 .emailButton,
 .clipboardButton {
   display: flex;
   align-items: center;
-
-  background-color: #f5f5f5;
-  height: 40px;
   border: none;
-  -webkit-box-shadow: var(--simple-shadow);
-  box-shadow: var(--simple-shadow);
+  background-color: var(--light-gray-2);
+  height: 40px;
+  font-size: 1rem;
+  -webkit-box-shadow: none;
+  box-shadow: none;
   padding: 0 10px;
   transition: all 150ms ease-in-out;
   &:hover {
@@ -201,6 +205,9 @@
 }
 
 @media (max-width: 1100px) {
+  .landing {
+    padding: 12% 0;
+  }
   .latestContainer {
     display: grid;
     grid-template-columns: 25% 25%;
@@ -235,6 +242,10 @@
   .bgWave {
     transform: scaleY(2);
   }
+
+  .landing {
+    padding: 18% 0;
+  }
   .latestContainer {
     display: grid;
     grid-template-columns: 30% 30%;
@@ -255,6 +266,9 @@
 }
 
 @media (max-width: 700px) {
+  .landing {
+    padding: 20% 0;
+  }
   .latestContainer {
     display: grid;
     grid-template-columns: 40% 40%;
@@ -283,6 +297,16 @@
 
   .reactIcon {
     max-width: 60px;
+  }
+
+  .hireMeContainer {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .emailParentButton {
+    margin-top: 10px;
   }
 }
 
