--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -18,6 +18,8 @@
     rgba(255, 255, 255, 1) 0%,
     rgba(250, 250, 250, 1) 100%
   );
+  --light-gray: #fafafa;
+  --light-gray-2: #f5f5f5;
 }
 
 html,
@@ -73,8 +75,8 @@ h6 {
 }
 
 h1 {
-  font-size: 2rem;
-  line-height: 2.5rem;
+  font-size: 2.5rem;
+  line-height: 3rem;
 }
 h2 {
   font-size: 1.8rem;
